--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,91 +9,52 @@
 
     <Button
         android:id="@+id/btnON"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="146dp"
-        android:layout_marginTop="188dp"
-        android:layout_marginEnd="123dp"
+        android:layout_width="131dp"
+        android:layout_height="58dp"
+        android:layout_marginTop="256dp"
         android:backgroundTint="#2723B3"
-        android:text="@string/btn_on"
+        android:text="ENCENDER"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.863"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnOFF"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/btnON"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="24dp"
+        android:layout_width="131dp"
+        android:layout_height="58dp"
+        android:layout_marginTop="16dp"
         android:backgroundTint="#2723B3"
-        android:gravity="center"
-        android:text="@string/btn_Off"
+        android:text="APAGAR"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.563"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnON" />
 
     <Button
         android:id="@+id/btnDesconectar"
-        android:layout_width="163dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/btnOFF"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="58dp"
+        android:layout_marginTop="8dp"
         android:backgroundTint="#6966DC"
-        android:gravity="center"
-        android:text="@string/btn_desconectar"
+        android:text="DESCONECTAR"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.576"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnOFF" />
+        app:layout_constraintTop_toBottomOf="@+id/btnOFF"
+        app:layout_constraintVertical_bias="0.036" />
 
     <TextView
         android:id="@+id/txtMensaje"
-        android:layout_width="103dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/btnDesconectar"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="164dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="144dp"
-        android:gravity="center"
-        android:text="@string/txt"
-        android:textColor="#959CDD"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnDesconectar" />
-
-    <EditText
-        android:id="@+id/edtTextoOut"
-        android:layout_width="303dp"
-        android:layout_height="44dp"
-        android:ems="10"
-        android:inputType="text"
-        android:text="@string/edtTextoOut"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/btnEnviar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:backgroundTint="#6966DC"
-        android:text="@string/btnEnviar"
+        android:gravity="center"
+        android:text="Hola!Bienvenido"
+        android:textColor="#959CDD"
+        android:textSize="24dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnON"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/edtTextoOut"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />"
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
